--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ canvas {
     display: block;
 }
 
-@font-face {
+/* @font-face {
     font-family: markerFelt;
     font-weight: normal;
     src: url('./assets/fonts/MarkerFelt.ttc') format('truetype');
@@ -16,7 +16,7 @@ canvas {
 @font-face {
     font-family: bobby-rough;
     src: url('/src/assets/fonts/Bobby\ Rough\ Soft.ttf') format('ttf');
-}
+} */
 
 .font-markerFelt {
     font-family: bobby-rough;
