--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
+
 * {
     padding: 0;
     margin: 0;
+}
+
+#game-container {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    background-color: black;
 }
 
 canvas {
     display: block;
 }
 
-.font {
+.font-chewy {
     font-family: 'Chewy', cursive;
     font-size: 0rem;
 }
 
-.font-markerFelt {
-    font-family: bobby-rough;
+.font-barlow {
+    font-family: 'Barlow', Arial, Helvetica, sans-serif;
     font-size: 0rem;
 }
