--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Boogaloo&family=Luckiest+Guy&display=swap');
 
 * {
     padding: 0;
@@ -18,12 +17,17 @@ canvas {
     display: block;
 }
 
-.font-chewy {
-    font-family: 'Chewy', cursive;
+.font-boogaloo {
+    font-family: 'Boogaloo', cursive;
     font-size: 0rem;
 }
 
 .font-barlow {
     font-family: 'Barlow', Arial, Helvetica, sans-serif;
     font-size: 0rem;
+}
+
+.font-luckiest-guy {
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 0;
 }
