--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,7 @@
 
 canvas {
     display: block;
-    box-shadow: 0px 0px 20px #012e1e;
-    /* border: 10px solid rgb(200, 248, 188); */
+    box-shadow: 0px 0px 20px #000000;
 }
 
 .font-boogaloo {
